--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-WELOCOME TO THE "ABACUS" PROGRAM,
+WELOCOME TO THE "ABACUS" PROGRAM，
+HE
 ABACUS IS AN ELECTRONIC STRUCTURE PACKAGE BASED ON DENSITY FUNCTIONAL THEORY.
 ABACUS ADOPTS EITHER PLANE WAVE BASIS OR NUMERICAL ATOMIC ORBITALS.
 
