Revert "Update README"
This reverts commit 3b0256398e1773f74dd9e3abcf71357150a341d8.

--- a/README
+++ b/README
@@ -1,10 +1,9 @@
-WELOCOME TO THE "ABACUS" PROGRAM
-
-THE PROJECT STARTS FROM https://github.com/abacusmodeling/abacus-develop,
-WHERE MORE INFORMATION CAN BE FOUND.
-
+WELOCOME TO THE "ABACUS" PROGRAM,
 ABACUS IS AN ELECTRONIC STRUCTURE PACKAGE BASED ON DENSITY FUNCTIONAL THEORY.
-ABACUS ADOPTS EITHER PLANE WAVE BASIS OR NUMERICAL ATOMIC ORBITALS
+ABACUS ADOPTS EITHER PLANE WAVE BASIS OR NUMERICAL ATOMIC ORBITALS.
+
+ABACUS IS NOW UNDER ACTIVE DEVELOPMENTS (since 2021.01), 
+PLEASE WAIT FOR NEW ANOUCEMENTS.
 
 ---------------------------------------------------------------------
 ABACUS provides the following features and functionalities:
